src/components/Changelog/Changelog.css
.changelogWrapper {
    padding: 18px;
    display: flex;
    justify-content: center;
    max-height: 711px;
}

.changelogContent {
    background-color: var(--text-color-lighterer);
    border-radius: 9px;
    display: flex;
    flex-direction: column;
    padding: 33px;
    overflow-y: auto;
    max-height: 732px;
    box-sizing: border-box;
}

.changelogTitle {
    color: var(--text-color-darkest);
    align-self: flex-start;
    font-size: 14px;
}

.changelogContent p {
    align-self: flex-start;
}

.changelogEntries {
    margin-top: 6px;
}

.changelogEntry {
    margin-bottom: 12px;
    display: flex;
    gap: 6px;
}

.date,
.message {
    font-size: 10px;
}

.date {
    color: var(--text-color-darkerer);
    flex-shrink: 0;
    width: 105px;
    font-weight: bold;
}

.message {
    color: var(--text-color-darker);
    white-space: pre-line;
}

